--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,3 +1,20 @@
+body {
+/*  background: url("/images/background.jpg") 0% 0% no-repeat; */
+  background-image:url('/images/background.jpg');
+  background-repeat:no-repeat;
+  background-position:center 25%;
+  width: 100%;
+  height: 100%;
+}
+
+.linear_gradient_square {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #333;
+    background: -moz-linear-gradient(top, blue, cyan);
+  }
+
+
 * { margin: 0;
     padding: 0;
 }
@@ -12,10 +29,12 @@ a:hover {
 }
 
 #welcometext {
-    font-size: 14pt;
+    font-size: 20pt;
     text-align: justify;
     width:80%;
     color:black;
+/*    box-shadow: 0 0 20px black, 20px 15px 30px yellow, -20px 15px 30px lime, -20px -15px 30px blue, 20px -15px 30px red; */
+/*    box-shadow: -10px -10px 0px #000; border-radius: 5px; padding: 5px 5px 5px 15px; */
 }
 
 #darken {
