--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
 	<br/>
 	Welcome to myapp
         <br/><br/>
+</div>
 
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <style type="text/css">
@@ -10,9 +11,7 @@
   body { height: 100%; margin: 0px; padding: 0px }
   #map_canvas { height: 100% }
 </style>
-<script type="text/javascript"
-    src="http://maps.google.com/maps/api/js?sensor=set_to_true_or_false">
-</script>
+<script type="text/javascript"src="http://maps.google.com/maps/api/js?sensor=true"> </script>
 <script type="text/javascript">
   function initialize() {
     var latlng = new google.maps.LatLng(-34.397, 150.644);
@@ -24,12 +23,15 @@
     var map = new google.maps.Map(document.getElementById("map_canvas"),
         myOptions);
   }
+  $(document).ready(function () {
+    initialize();
+  }
+
+
 
 </script>
 
-<body onload="initialize()">
-  <div id="map_canvas" style="width:100%; height:100%"></div>
-</body>
+
+<div id="map_canvas" style="width:100%; height:100%"></div>
 
 
-</div>
