updated header trying to get market/symbol to pop up

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,10 +1,18 @@
 body {
-/*  background: url("/images/background.jpg") 0% 0% no-repeat; */
-  background-image:url('/images/background.jpg'); 
+/*  background-image:
+      -moz-linear-gradient(top,#00BFFF,#00ff00);
+  background-image:
+      -webkit-gradient(linear, left top,left bottom,from(#00BFFF),to(#00ff00));
+  width: 100%;
+  height: 100%;
+*/
+/*  background-image:url('/images/background.jpg');
   background-repeat:no-repeat;
   background-position:center 25%;
   width: 100%;
   height: 100%;
+*/
+
 }
 
 .linear_gradient_square {
@@ -29,9 +37,24 @@ a:hover {
 }
 
 #welcometext {
-    font-size: 20pt;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    background-image:
+        -moz-linear-gradient(top,#00BFFF,#ffffff,#00ff00); /* cyan 00FFFF */
+    background-image:
+        -webkit-gradient(linear,
+         left top,
+         left bottom,
+         color-stop(0.25, #00BFFF),
+         color-stop(0.49, rgb(255,255,255)),
+         color-stop(1.0, #00ff00));
+/*        from(#00BFFF),
+        to(#00ff00)); */
+
+
+    font-size: 30pt;
     text-align: justify;
-    width:80%;
+    width:100%;
     color:black;
 /*    box-shadow: 0 0 20px black, 20px 15px 30px yellow, -20px 15px 30px lime, -20px -15px 30px blue, 20px -15px 30px red; */
 /*    box-shadow: -10px -10px 0px #000; border-radius: 5px; padding: 5px 5px 5px 15px; */
