--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 
 <div id="welcometext" class="leftside">
 	<br/>
-	Welcome to myapp
+	Welcome to mapme
         <br/><br/>
 </div>
 
@@ -21,17 +21,18 @@
 </style>
 <script type="text/javascript"src="http://maps.google.com/maps/api/js?sensor=true"> </script>
 <script type="text/javascript">
+/*
   function initialize() {
     var latlng = new google.maps.LatLng(-34.397, 150.644);
     var myOptions = {
-      zoom: 8,
+      zoom: 4,
       center: latlng,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"),
         myOptions);
   }
-
+*/
 
 // Note that using Google Gears requires loading the Javascript
 // at http://code.google.com/apis/gears/gears_init.js
@@ -43,7 +44,7 @@ var browserSupportFlag =  new Boolean();
 
 function initialize() {
   var myOptions = {
-    zoom: 6,
+    zoom: 16,
     mapTypeId: google.maps.MapTypeId.ROADMAP
   };
   var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
@@ -72,6 +73,15 @@ function initialize() {
     browserSupportFlag = false;
     handleNoGeolocation(browserSupportFlag);
   }
+  var image = '/images/red_GarageSale.png';
+  //alert(initialLocation);
+  var garageSaleLocation = initialLocation; // new google.maps.LatLng(-33.890542, 151.274856);
+  var saleMarker = new google.maps.Marker({
+      position: garageSaleLocation,
+      map: map,
+      title:"First Marker"
+ //     icon: image
+  });
 
   function handleNoGeolocation(errorFlag) {
     if (errorFlag == true) {
