messing with stuff

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -54,6 +54,7 @@ a:hover {
 
     font-size: 30pt;
     text-align: justify;
+    height: 5%;
     width:100%;
     color:black;
 /*    box-shadow: 0 0 20px black, 20px 15px 30px yellow, -20px 15px 30px lime, -20px -15px 30px blue, 20px -15px 30px red; */
