--- a/views/layout.erb
+++ b/views/layout.erb
@@ -61,7 +61,8 @@
 };
 </script>
 </head>
-<body onload="initialize()">
+<!-- <body onload="initialize()"> -->
+<body>
   <div id="darken"></div>
 
   <%= yield %>
