adjusted get location to receive map and callback of set location

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -52,9 +52,9 @@ a:hover {
         to(#00ff00)); */
 
 
-    font-size: 30pt;
-    text-align: justify;
-    height: 5%;
+    font-size: 20pt;
+    text-align: center;
+    height: 30px;
     width:100%;
     color:black;
 /*    box-shadow: 0 0 20px black, 20px 15px 30px yellow, -20px 15px 30px lime, -20px -15px 30px blue, 20px -15px 30px red; */
